--- a/extension-manifest.json
+++ b/extension-manifest.json
@@ -2,8 +2,8 @@
     "manifestVersion": 1,
     "id": "redgateSqlCi",
     "name": "Redgate SQL CI",
-    "version": "1.0.15",
     "publisher": "redgatesoftware",
+    "version": "1.1.1",
     "description": "Continuous integration for databases. Build, test, synchronize and publish your SQL Server databases using Redgate SQL CI.",
     "public": true,
     "icons": {
@@ -16,10 +16,13 @@
         "Redgate",
         "Red Gate",
         "sqlci",
-        "deployment"
+        "deployment",
+		"upgrade",
+		"advisor"
     ],
     "files": [
         {   "path": "TheTask" },
+		{   "path": "UpgradeAdvisorTask" },
         {   
 		    "path": "images",
 			"addressable": true
@@ -54,6 +57,16 @@
             ],
             "properties": {
                 "name": "TheTask"
+            }
+        },
+		{
+            "id": "UpgradeAdvisor",
+            "type": "ms.vss-distributed-task.task",
+            "targets": [
+                "ms.vss-distributed-task.tasks"
+            ],
+            "properties": {
+                "name": "UpgradeAdvisorTask"
             }
         }
     ]
