--- a/extension-manifest.json
+++ b/extension-manifest.json
@@ -3,7 +3,7 @@
     "id": "redgateSqlCi",
     "name": "Redgate SQL CI",
     "publisher": "redgatesoftware",
-    "version": "1.1.1",
+    "version": "1.1.7",
     "description": "Continuous integration for databases. Build, test, synchronize and publish your SQL Server databases using Redgate SQL CI.",
     "public": true,
     "icons": {
@@ -25,6 +25,10 @@
 		{   "path": "UpgradeAdvisorTask" },
         {   
 		    "path": "images",
+			"addressable": true
+		},
+		{   
+		    "path": "7Z",
 			"addressable": true
 		}
     ],
