--- a/extension-manifest.json
+++ b/extension-manifest.json
@@ -1,7 +1,7 @@
 {
     "manifestVersion": 1,
     "id": "redgateSqlCi",
-    "name": "Redgate DLM Automation Build",
+    "name": "DLM Automation Build",
     "version": "1.0.16",
     "publisher": "redgatesoftware",
     "description": "Continuous integration for databases. Build, test, synchronize and publish your SQL Server databases using Redgate DLM Automation.",
